WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173671
When Mission Control closes fullscreen window, allow media element to update its state.
https://bugs.webkit.org/show_bug.cgi?id=173671
Summary
When Mission Control closes fullscreen window, allow media element to update ...
Jeremy Jones
Reported
2017-06-21 15:24:54 PDT
When Mission Control closes fullscreen window, allow media element to update its state.
Attachments
Patch
(2.01 KB, patch)
2017-06-21 15:30 PDT
,
Jeremy Jones
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing.
(2.01 KB, patch)
2017-06-26 09:31 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-06-21 15:25:59 PDT
<
rdar://problem/32892671
>
Jeremy Jones
Comment 2
2017-06-21 15:30:00 PDT
Created
attachment 313556
[details]
Patch
Eric Carlson
Comment 3
2017-06-21 18:26:05 PDT
Comment on
attachment 313556
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=313556&action=review
> Source/WebKit2/ChangeLog:10 > + meid element that fullscreen has exited.
Not: “meid”
Jeremy Jones
Comment 4
2017-06-26 09:31:19 PDT
Created
attachment 313844
[details]
Patch for landing.
WebKit Commit Bot
Comment 5
2017-06-26 11:00:43 PDT
Comment on
attachment 313844
[details]
Patch for landing. Clearing flags on attachment: 313844 Committed
r218813
: <
http://trac.webkit.org/changeset/218813
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug