When Mission Control closes fullscreen window, allow media element to update its state. https://bugs.webkit.org/show_bug.cgi?id=173671 rdar://problem/32892671

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-06-26
Reviewed by Eric Carlson.

When Mission Control closes element fullscreen without an animation, we need to notify the
media element that fullscreen has exited.

Without this change, the page still behaves like the element is in fullscreen.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController beganExitFullScreenWithInitialFrame:finalFrame:]):
(-[WKFullScreenWindowController finishedExitFullScreenAnimation:]):

Canonical link: https://commits.webkit.org/190693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218813 268f45cc-cd09-0410-ab3c-d52691b4dbfc