Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm
@@ -383,6 +383,7 @@ static const float minVideoWidth = 480 + 20 + 20; // Note: Keep in sync with med
         // fullscreen was exited without being initiated by WebKit. Do not return early, but continue to
         // clean up our state by calling those methods which would have been called by -exitFullscreen,
         // and proceed to close the fullscreen window.
+        [self _manager]->requestExitFullScreen();
         [_webViewPlaceholder setTarget:nil];
         [self _manager]->setAnimatingFullScreen(false);
         [self _manager]->willExitFullScreen();
